--- a/hydro-flood.html
+++ b/hydro-flood.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Flood Floor - Water - BioTherm Solutions</title>
+	<title>BioTherm Solutions - Hydro Flood Floor</title>
 </head>
 
 <body>
