--- a/hydro-toob.html
+++ b/hydro-toob.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>The TOOB&trade; - Water - BioTherm Solutions</title>
+	<title>BioTherm Solutions - The TOOB</title>
 </head>
 
 <body>
