--- a/heat.html
+++ b/heat.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Heat - BioTherm Solutions</title>
+	<title>BioTherm Solutions - Heat</title>
 </head>
 
 <body>
