--- a/heat.html
+++ b/heat.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>BioTherm Solutions - Heat</title>
+	<title>Heat | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -91,7 +91,6 @@
 					<div class="card-body ">
 						<div class="tab-content text-center">
 							<div class="tab-pane active" id="Boiler">
-								<img src="img/pipes.jpg" class="rounded img-fluid" style="width:120px;float:left;">
 								<h4>Boilers</h4>
 								<p>The generation and delivery of heat through a hot water system is an efficient method of transporting energy, whether the distance is long or short.</p>
 								<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
@@ -121,16 +120,16 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3>Industry</h3>
-	            <button type="button" class="btn">Greenhouse</button>
-	            <button type="button" class="btn">Institutional</button>
-	            <button type="button" class="btn">Habitat</button>
-	            <button type="button" class="btn">Turf</button>
+					<a href="heat-greenhouse.html"><button type="button" class="btn">Greenhouse</button></a>
+					<button type="button" class="btn">Institutional</button>
+					<button type="button" class="btn">Habitat</button>
+					<button type="button" class="btn">Turf</button>
 					<h3>Products</h3>
-					<button type="button" class="btn">Boilers</button>
-	            <button type="button" class="btn">DuoFin&trade;</button>
-	            <button type="button" class="btn">HDX&trade;</button>
-	            <button type="button" class="btn">MegaTube&trade;</button>
-	            <button type="button" class="btn">MicroClimate&trade;</button>
+					<a href="heat-boilers.html"><button type="button" class="btn">Boilers</button></a>
+					<button type="button" class="btn">DuoFin&trade;</button>
+					<button type="button" class="btn">HDX&trade;</button>
+					<button type="button" class="btn">MegaTube&trade;</button>
+					<button type="button" class="btn">MicroClimate&trade;</button>
 					<button type="button" class="btn">StarFin&trade;</button>
 					<button type="button" class="btn">SunFin&trade;</button>
 					<h3>Crop</h3>
@@ -138,11 +137,11 @@
 					<button type="button" class="btn">In-Crop</button>
 				</div>
 				<div class="col-md-6">
-					<h3>Ground</h3>
-	            <button type="button" class="btn">Bed</button>
-	            <button type="button" class="btn">Frost Protection</button>
-	            <button type="button" class="btn">In-Floor</button>
-	            <button type="button" class="btn">In-Ground</button>
+				<h3>Ground</h3>
+					<button type="button" class="btn">Bed</button>
+					<button type="button" class="btn">Frost Protection</button>
+					<button type="button" class="btn">In-Floor</button>
+					<button type="button" class="btn">In-Ground</button>
 					<button type="button" class="btn">On-Ground</button>
 					<button type="button" class="btn">Snow Melt</button>
 					<h3>Bench</h3>
