--- a/tech.html
+++ b/tech.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>BioTherm Solutions - Technology</title>
+	<title>Grow Technology | BioTherm Solutions</title>
 </head>
 
 <body>
