--- a/heat.html
+++ b/heat.html
@@ -120,12 +120,15 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3>Industry</h3>
-					<a href="heat-greenhouse.html"><button type="button" class="btn">Greenhouse</button></a>
-					<button type="button" class="btn">Institutional</button>
+					<a href=""><button type="button" class="btn">Greenhouse</button></a>
+					<a href=""><button type="button" class="btn">Institutional</button></a>
 					<button type="button" class="btn">Habitat</button>
 					<button type="button" class="btn">Turf</button>
 					<h3>Products</h3>
 					<a href="heat-boilers.html"><button type="button" class="btn">Boilers</button></a>
+					<a href="heat-boilers-atmospheric.html"><button type="button" class="btn">Boilers - Atmospheric</button></a>
+					<a href="heat-boilers-closed-combustion.html"><button type="button" class="btn">Boilers - Closed Combustion</button></a>
+					<a href="heat-boilers-condensing.html"><button type="button" class="btn">Boilers - Condensing</button></a>
 					<button type="button" class="btn">DuoFin&trade;</button>
 					<button type="button" class="btn">HDX&trade;</button>
 					<button type="button" class="btn">MegaTube&trade;</button>
