boiler internal links

--- a/heat-boilers.html
+++ b/heat-boilers.html
@@ -83,11 +83,11 @@
 												<div class="col-xs-12">
 													<div class="row">
 														<div class="col-md-8">
-															<h2><a href="http://www.biothermsolutions.com/products/boilers/atmospheric">Atmospheric</a></h2>
+															<h2><a href="heat-boilers-atmospheric.html">Atmospheric</a></h2>
 															<p>Fuel combustion the old fashioned way.</p>
 														</div>
 														<div class="col-md-4">
-															<a href="http://www.biothermsolutions.com/products/boilers/atmospheric"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/RayTherm_413_300_60_s.jpg" width="413" height="300" alt="BioTherm Atmospheric" class="img-responsive" /></a>
+															<a href="heat-boilers-atmospheric.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/RayTherm_413_300_60_s.jpg" width="413" height="300" alt="BioTherm Atmospheric" class="img-responsive" /></a>
 														</div>
 													</div>
 												</div>
@@ -101,11 +101,11 @@
 												<div class="col-xs-12">
 													<div class="row">
 														<div class="col-md-8">
-															<h2><a href="http://www.biothermsolutions.com/products/boilers/closed-combustion">Closed Combustion</a></h2>
+															<h2><a href="heat-boilers-closed-combustion.html">Closed Combustion</a></h2>
 															<p>Developed to meet anti-smog regulations.</p>
 														</div>
 														<div class="col-md-4">
-															<a href="http://www.biothermsolutions.com/products/boilers/closed-combustion"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Hi_Delta_398_300_60_s.jpg" width="398" height="300" alt="BioTherm Closed Combustion" class="img-responsive" /></a>
+															<a href="heat-boilers-closed-combustion.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Hi_Delta_398_300_60_s.jpg" width="398" height="300" alt="BioTherm Closed Combustion" class="img-responsive" /></a>
 														</div>
 													</div>
 												</div>
@@ -119,11 +119,11 @@
 												<div class="col-xs-12">
 													<div class="row">
 														<div class="col-md-8">
-															<h2><a href="http://www.biothermsolutions.com/products/boilers/condensing">Condensing</a></h2>
+															<h2><a href="heat-boilers-condensing.html">Condensing</a></h2>
 															<p>Efficient heating at maximum value.</p>
 														</div>
 														<div class="col-md-4">
-															<a href="http://www.biothermsolutions.com/products/boilers/condensing"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XPakFT_175_300_60_s.jpg" width="175" height="300" alt="BioTherm Condensing" class="img-responsive" /></a>
+															<a href="heat-boilers-condensing.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XPakFT_175_300_60_s.jpg" width="175" height="300" alt="BioTherm Condensing" class="img-responsive" /></a>
 														</div>
 													</div>
 												</div>
