--- a/heat-industry-habitat.html
+++ b/heat-industry-habitat.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Heat | BioTherm Solutions</title>
+	<title>Habitat | Industry | Heat | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -40,138 +40,32 @@
 	</div>
 </nav>
 
-
-
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-heat.jpg'); ">
+<div class="page-header header-smaller header-filter" data-parallax="true">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Heat</b>ing Solutions</h1>
-				<h3>Efficient Greenhouse Heating</h3>
-				<h4>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h4>
-			</div>
-		</div>
-		<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
+	<div class="container section">
+		
+		
+		
+		
+		
+	</div>
+	
 	
 	<div class="container section">
 		<div class="row">
 			<div class="col-md-6">
-				<p>Our innovative energy saving technology is designed to meet the individual needs of even the most demanding projects -- whether through new construction, major upgrades, or retrofits. Each greenhouse heating system is tailored to specific climate and growing conditions. Our systems are durable and efficient which result in high success rates and peak crops.</p>
-<p>BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money. From initial consultation to installation, BioTherm’s staff is with you every step of the way.  Each system includes comprehensive instructions for installation and operation and custom CAD drawings. All heating systems include two years of free on-going support.</p>
-<p>BioTherm designs mission-critical heating systems for greenhouses. These buildings rapidly gain heat when the sun comes out and lose heat almost as fast when the sun disappears. Humidity levels can be jungle-like. The presence of water, fertilizer, and other corrosive chemicals is everywhere. We have invested over three decades into developing rugged heating solutions that are unique and designed to go the distance and survive to help plants thrive.</p>
 			</div>
 			<div class="col-md-6">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-danger">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">					
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Boiler" data-toggle="tab"> Boiler</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Ground" data-toggle="tab"> Ground</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Crop" data-toggle="tab"> Crop</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Bench" data-toggle="tab"> Bench</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Space" data-toggle="tab"> Space</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Boiler">
-								<h4>Boilers</h4>
-								<p>The generation and delivery of heat through a hot water system is an efficient method of transporting energy, whether the distance is long or short.</p>
-								<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
-							</div>
-							<div class="tab-pane" id="Ground">
-								<h4>Ground Heat</h4>
-								<p>Praesent mi lorem, vestibulum nec eros sed, viverra auctor dui. Aenean ultricies at augue eget congue. Ut in porttitor odio, condimentum luctus nibh. Etiam eget elementum turpis. Phasellus aliquam felis vitae scelerisque placerat. </p>
-							</div>
-							<div class="tab-pane" id="Crop">
-								<h4>Crop Heat</h4>
-								<p>Praesent mi lorem, vestibulum nec eros sed, viverra auctor dui. Aenean ultricies at augue eget congue. Ut in porttitor odio, condimentum luctus nibh. Etiam eget elementum turpis. Phasellus aliquam felis vitae scelerisque placerat. </p>
-							</div>
-							<div class="tab-pane" id="Bench">
-								<h4>Bench Heat</h4>
-								<p>Praesent mi lorem, vestibulum nec eros sed, viverra auctor dui. Aenean ultricies at augue eget congue. Ut in porttitor odio, condimentum luctus nibh. Etiam eget elementum turpis. Phasellus aliquam felis vitae scelerisque placerat. </p>
-							</div>
-							<div class="tab-pane" id="Space">
-								<h4>Space Heat</h4>
-								<p>Praesent mi lorem, vestibulum nec eros sed, viverra auctor dui. Aenean ultricies at augue eget congue. Ut in porttitor odio, condimentum luctus nibh. Etiam eget elementum turpis. Phasellus aliquam felis vitae scelerisque placerat. </p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="section">
-			<div class="row">
-				<div class="col-md-6">
-					<h3>Industry</h3>
-					<a href="heat-industry-greenhouse.html"><button type="button" class="btn">Greenhouse</button></a>
-					<a href="heat-industry-institutional.html"><button type="button" class="btn">Institutional</button></a>
-					<a href="heat-industry-habitat.html"><button type="button" class="btn">Habitat</button>
-					<a href="heat-industry-turf.html"><button type="button" class="btn">Turf</button>
-					<h3>Products</h3>
-					<a href="heat-boilers.html"><button type="button" class="btn">Boilers</button></a>
-					<a href="heat-boilers-atmospheric.html"><button type="button" class="btn">Boilers - Atmospheric</button></a>
-					<a href="heat-boilers-closed-combustion.html"><button type="button" class="btn">Boilers - Closed Combustion</button></a>
-					<a href="heat-boilers-condensing.html"><button type="button" class="btn">Boilers - Condensing</button></a>
-					<button type="button" class="btn">DuoFin&trade;</button>
-					<button type="button" class="btn">HDX&trade;</button>
-					<button type="button" class="btn">MegaTube&trade;</button>
-					<button type="button" class="btn">MicroClimate&trade;</button>
-					<button type="button" class="btn">StarFin&trade;</button>
-					<button type="button" class="btn">SunFin&trade;</button>
-					<h3>Crop</h3>
-					<button type="button" class="btn">Cart Rail</button>
-					<button type="button" class="btn">In-Crop</button>
-				</div>
-				<div class="col-md-6">
-				<h3>Ground</h3>
-					<button type="button" class="btn">Bed</button>
-					<button type="button" class="btn">Frost Protection</button>
-					<button type="button" class="btn">In-Floor</button>
-					<button type="button" class="btn">In-Ground</button>
-					<button type="button" class="btn">On-Ground</button>
-					<button type="button" class="btn">Snow Melt</button>
-					<h3>Bench</h3>
-					<button type="button" class="btn">Bench</button>
-					<button type="button" class="btn">On-Bench</button>
-					<button type="button" class="btn">Under-Bench</button>
-					<h3>Space</h3>
-					<button type="button" class="btn">Gutter</button>
-					<button type="button" class="btn">Perimeter</button>
-					<button type="button" class="btn">Top</button>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-6">
-				<h3></h3>
-			</div>
-			<div class="col-md-6">
-
 			</div>
 		</div>
 	</div>
-	
 </div>
-
-
-
 
 <!--     *********    FOOTER     *********      -->
 <footer class="footer footer-white footer-big">
@@ -221,9 +115,6 @@
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
-
-
-
 
 
 <script src="js/jquery.min.js"></script>
