--- a/heat.html
+++ b/heat.html
@@ -124,6 +124,7 @@
 					<a href="heat-industry-institutional.html"><button type="button" class="btn">Institutional</button></a>
 					<a href="heat-industry-habitat.html"><button type="button" class="btn">Habitat</button>
 					<a href="heat-industry-turf.html"><button type="button" class="btn">Turf</button>
+					<a href="heat-industry-building.html"><button type="button" class="btn">Work Buildings</button>
 					<h3>Products</h3>
 					<a href="heat-boilers.html"><button type="button" class="btn">Boilers</button></a>
 					<a href="heat-boilers-atmospheric.html"><button type="button" class="btn">Boilers - Atmospheric</button></a>
