--- a/heat.html
+++ b/heat.html
@@ -70,8 +70,9 @@
 		<div class="row">
 			<div class="col-md-6">
 				<p>Our innovative energy saving technology is designed to meet the individual needs of even the most demanding projects -- whether through new construction, major upgrades, or retrofits. Each greenhouse heating system is tailored to specific climate and growing conditions. Our systems are durable and efficient which result in high success rates and peak crops.</p>
-<p>BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money. From initial consultation to installation, BioTherm’s staff is with you every step of the way.  Each system includes comprehensive instructions for installation and operation and custom CAD drawings. All heating systems include two years of free on-going support.</p>
-<p>BioTherm designs mission-critical heating systems for greenhouses. These buildings rapidly gain heat when the sun comes out and lose heat almost as fast when the sun disappears. Humidity levels can be jungle-like. The presence of water, fertilizer, and other corrosive chemicals is everywhere. We have invested over three decades into developing rugged heating solutions that are unique and designed to go the distance and survive to help plants thrive.</p>
+				<p>BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money. From initial consultation to installation, BioTherm’s staff is with you every step of the way.  Each system includes comprehensive instructions for installation and operation and custom CAD drawings. All heating systems include two years of free on-going support.</p>
+				<p>BioTherm designs mission-critical heating systems for greenhouses. These buildings rapidly gain heat when the sun comes out and lose heat almost as fast when the sun disappears. Humidity levels can be jungle-like. The presence of water, fertilizer, and other corrosive chemicals is everywhere. We have invested over three decades into developing rugged heating solutions that are unique and designed to go the distance and survive to help plants thrive.</p>
+				<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
 			</div>
 			<div class="col-md-6">
 				<div class="card card-nav-tabs">
@@ -79,7 +80,8 @@
 						<div class="nav-tabs-navigation">
 							<div class="nav-tabs-wrapper">					
 								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Boiler" data-toggle="tab"> Boiler</a></li>
+									<li class="nav-item"><a class="nav-link active" href="#Products" data-toggle="tab"> Products</a></li>
+									<li class="nav-item"><a class="nav-link" href="#Boiler" data-toggle="tab"> Boiler</a></li>
 									<li class="nav-item"><a class="nav-link" href="#Ground" data-toggle="tab"> Ground</a></li>
 									<li class="nav-item"><a class="nav-link" href="#Crop" data-toggle="tab"> Crop</a></li>
 									<li class="nav-item"><a class="nav-link" href="#Bench" data-toggle="tab"> Bench</a></li>
@@ -90,14 +92,32 @@
 					</div>
 					<div class="card-body ">
 						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Boiler">
+							<div class="tab-pane active" id="Products">
+								<h4>Products</h4>
+								<a href="heat-products-duofin.html"><button type="button" class="btn">DuoFin&trade;</button></a>
+								<a href="heat-products-hdx.html"><button type="button" class="btn">HDX&trade;</button></a>
+								<a href="heat-products-megatube.html"><button type="button" class="btn">MegaTube&trade;</button></a>
+								<a href="heat-products-microclimate.html"><button type="button" class="btn">MicroClimate&trade;</button></a>
+								<a href="heat-products-starfin.html"><button type="button" class="btn">StarFin&trade;</button></a>
+								<a href="heat-products-sunfin.html"><button type="button" class="btn">SunFin&trade;</button></a>
+							</div>
+							<div class="tab-pane" id="Boiler">
 								<h4>Boilers</h4>
 								<p>The generation and delivery of heat through a hot water system is an efficient method of transporting energy, whether the distance is long or short.</p>
-								<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
+								<a href="heat-boilers.html"><button type="button" class="btn">Boilers</button></a>
+								<a href="heat-boilers-atmospheric.html"><button type="button" class="btn">Boilers - Atmospheric</button></a>
+								<a href="heat-boilers-closed-combustion.html"><button type="button" class="btn">Boilers - Closed Combustion</button></a>
+								<a href="heat-boilers-condensing.html"><button type="button" class="btn">Boilers - Condensing</button></a>
 							</div>
 							<div class="tab-pane" id="Ground">
 								<h4>Ground Heat</h4>
 								<p>Praesent mi lorem, vestibulum nec eros sed, viverra auctor dui. Aenean ultricies at augue eget congue. Ut in porttitor odio, condimentum luctus nibh. Etiam eget elementum turpis. Phasellus aliquam felis vitae scelerisque placerat. </p>
+								<button type="button" class="btn">Bed</button>
+								<button type="button" class="btn">Frost Protection</button>
+								<button type="button" class="btn">In-Floor</button>
+								<button type="button" class="btn">In-Ground</button>
+								<button type="button" class="btn">On-Ground</button>
+								<button type="button" class="btn">Snow Melt</button>
 							</div>
 							<div class="tab-pane" id="Crop">
 								<h4>Crop Heat</h4>
@@ -130,18 +150,19 @@
 					<a href="heat-boilers-atmospheric.html"><button type="button" class="btn">Boilers - Atmospheric</button></a>
 					<a href="heat-boilers-closed-combustion.html"><button type="button" class="btn">Boilers - Closed Combustion</button></a>
 					<a href="heat-boilers-condensing.html"><button type="button" class="btn">Boilers - Condensing</button></a>
-					<button type="button" class="btn">DuoFin&trade;</button>
-					<button type="button" class="btn">HDX&trade;</button>
-					<button type="button" class="btn">MegaTube&trade;</button>
-					<button type="button" class="btn">MicroClimate&trade;</button>
-					<button type="button" class="btn">StarFin&trade;</button>
-					<button type="button" class="btn">SunFin&trade;</button>
+					<a href="heat-products-duofin.html"><button type="button" class="btn">DuoFin&trade;</button></a>
+					<a href="heat-products-hdx.html"><button type="button" class="btn">HDX&trade;</button></a>
+					<a href="heat-products-megatube.html"><button type="button" class="btn">MegaTube&trade;</button></a>
+					<a href="heat-products-microclimate.html"><button type="button" class="btn">MicroClimate&trade;</button></a>
+					<a href="heat-products-starfin.html"><button type="button" class="btn">StarFin&trade;</button></a>
+					<a href="heat-products-sunfin.html"><button type="button" class="btn">SunFin&trade;</button></a>
+
+				</div>
+				<div class="col-md-6">
 					<h3>Crop</h3>
 					<button type="button" class="btn">Cart Rail</button>
 					<button type="button" class="btn">In-Crop</button>
-				</div>
-				<div class="col-md-6">
-				<h3>Ground</h3>
+					<h3>Ground</h3>
 					<button type="button" class="btn">Bed</button>
 					<button type="button" class="btn">Frost Protection</button>
 					<button type="button" class="btn">In-Floor</button>
