img-fluid product pages

--- a/heat-boilers-atmospheric.html
+++ b/heat-boilers-atmospheric.html
@@ -78,7 +78,7 @@
 							<h3>RayTherm</h3>
 							<div class="row">
 								<div class="col-sm-3">
-									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/RayTherm_500_363_60_s.jpg" maxHeight="200" width="500" height="363" alt="BioTherm RayTherm" class="img-responsive" />
+									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/RayTherm_500_363_60_s.jpg" maxHeight="200" width="500" height="363" alt="BioTherm RayTherm" class="img-fluid" />
 								</div>
 								<div class="col-sm-7">
 									<table class="table table-bordered">
