--- a/heat-boilers-closed-combustion.html
+++ b/heat-boilers-closed-combustion.html
@@ -82,7 +82,7 @@
 							<h3>HiDelta</h3>
 							<div class="row">
 								<div class="col-sm-3">
-									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Hi_Delta_500_377_60_s.jpg" maxHeight="200" width="500" height="377" alt="BioTherm HiDelta" class="img-responsive" />
+									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Hi_Delta_500_377_60_s.jpg" maxHeight="200" width="500" height="377" alt="BioTherm HiDelta" class="img-fluid" />
 								</div>
 								<div class="col-sm-7">
 									<table class="table table-bordered">
@@ -202,7 +202,7 @@
 							<h3>Delta Limited</h3>
 							<div class="row">
 								<div class="col-sm-3">
-									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/DeltaLimited_500_332_60_s.jpg" maxHeight="200" width="500" height="332" alt="BioTherm Delta Limited" class="img-responsive" />
+									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/DeltaLimited_500_332_60_s.jpg" maxHeight="200" width="500" height="332" alt="BioTherm Delta Limited" class="img-fluid" />
 								</div>
 								<div class="col-sm-7">
 									<table class="table table-bordered">
@@ -287,7 +287,7 @@
 							<h3>MVB</h3>
 							<div class="row">
 								<div class="col-sm-3">
-									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MVB_399_600_60_s.jpg" maxHeight="200" width="399" height="600" alt="BioTherm MVB" class="img-responsive" />
+									<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MVB_399_600_60_s.jpg" maxHeight="200" width="399" height="600" alt="BioTherm MVB" class="img-fluid" />
 								</div>
 								<div class="col-sm-7">
 									<table class="table table-bordered">
