--- a/heat-boilers-condensing.html
+++ b/heat-boilers-condensing.html
@@ -81,7 +81,7 @@
 					<h3></h3>
 					<div class="row">
 						<div class="col-sm-3">
-							<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XPakFT_350_600_60_s.jpg" maxHeight="200" width="350" height="600" alt="BioTherm " class="img-responsive" />
+							<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XPakFT_350_600_60_s.jpg" maxHeight="200" width="350" height="600" alt="BioTherm " class="img-fluid" />
 						</div>
 						<div class="col-sm-7">
 							<table class="table table-bordered">
@@ -131,7 +131,7 @@
 					<h3></h3>
 					<div class="row">
 						<div class="col-sm-3">
-							<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XFyre_500_550_60_s.jpg" maxHeight="200" width="500" height="550" alt="BioTherm " class="img-responsive" />
+							<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XFyre_500_550_60_s.jpg" maxHeight="200" width="500" height="550" alt="BioTherm " class="img-fluid" />
 						</div>
 						<div class="col-sm-7">
 							<table class="table table-bordered">
@@ -181,7 +181,7 @@
 					<h3></h3>
 					<div class="row">
 						<div class="col-sm-3">
-							<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XTherm_404_600_60_s.jpg" maxHeight="200" width="404" height="600" alt="BioTherm " class="img-responsive" />
+							<img class="img-fluid" src="http://biothermsolutions.com/images/made/chrootassets/uploads/products-applications/XTherm_404_600_60_s.jpg" maxHeight="200" width="404" height="600" alt="BioTherm " class="img-fluid" />
 						</div>
 						<div class="col-sm-7">
 							<table class="table table-bordered">
