--- a/heat-applications-space-gutter.html
+++ b/heat-applications-space-gutter.html
@@ -80,7 +80,7 @@
 							</div>
 							<div class="col-sm-5">
 						
-								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Over_Head_and_Snow_Melt_2_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-responsive margin-bottom-20" />
+								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Over_Head_and_Snow_Melt_2_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-fluid margin-bottom-20" />
 						
 							</div>
 						</div>
@@ -90,19 +90,19 @@
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Over_Head_and_Snow_Melt_2_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Over_Head_and_Snow_Melt_2_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Over_Head_and_Snow_Melt_2_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-01_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-02_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-02_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-02_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-03_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-03_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/gutter-03_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Gutter" class="img-fluid" />
 										</a>
 									</div>
 								</div>	
@@ -124,7 +124,7 @@
 														<p>High-output, radiant heat finned pipe made specifically for various greenhouse heating applications.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/sunfin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_-_Over_Heat_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm SunFin&reg;" class="img-responsive" /></a>
+														<a href="http://www.biothermsolutions.com/products/sunfin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_-_Over_Heat_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm SunFin&reg;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -144,7 +144,7 @@
 														<p>Provides incredibly even heating across the width of your greenhouse growing areas.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/duofin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-responsive" /></a>
+														<a href="http://www.biothermsolutions.com/products/duofin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -164,7 +164,7 @@
 														<p>Provides high heat output and minimizes pipes</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/starfin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Perimeter_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm StarFin&trade;" class="img-responsive" /></a>
+														<a href="http://www.biothermsolutions.com/products/starfin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Perimeter_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm StarFin&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
