--- a/heat-applications-bench-on-bench.html
+++ b/heat-applications-bench-on-bench.html
@@ -94,7 +94,7 @@
 							</div>
 							<div class="col-sm-5">
 						
-								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MicroClimate_-On-Bench_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm On-Bench" class="img-responsive margin-bottom-20" />
+								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MicroClimate_-On-Bench_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm On-Bench" class="img-fluid margin-bottom-20" />
 						
 							</div>
 						</div>
@@ -104,19 +104,19 @@
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MC_Duarte_3_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MC_Duarte_3_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm On-Bench" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MC_Duarte_3_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm On-Bench" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Under-Bench_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Under-Bench_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm On-Bench" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Under-Bench_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm On-Bench" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Tubing_-_On_Bench_Heat_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Tubing_-_On_Bench_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm On-Bench" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Tubing_-_On_Bench_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm On-Bench" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Tubing_-_Propagation_Heat_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Tubing_-_Propagation_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm On-Bench" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/MicroClimate_Tubing_-_Propagation_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm On-Bench" class="img-fluid" />
 										</a>
 									</div>
 								</div>	
@@ -138,7 +138,7 @@
 														<p>The original energy-saving BioTherm bench top heating system.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/microclimate-tubing"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MicroClimate_-On-Bench_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MicroClimate&trade; Tubing" class="img-responsive" /></a>
+														<a href="http://www.biothermsolutions.com/products/microclimate-tubing"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MicroClimate_-On-Bench_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MicroClimate&trade; Tubing" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -158,7 +158,7 @@
 														<p>Jumbo size manifold technology to work with a wide range of heating applications.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/megatube"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MegaTube_for_Vegetables_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MegaTube&trade;" class="img-responsive" /></a>
+														<a href="http://www.biothermsolutions.com/products/megatube"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MegaTube_for_Vegetables_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MegaTube&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
