--- a/heat-applications-crop-cart-rail.html
+++ b/heat-applications-crop-cart-rail.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-sm-5">
 						
-								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-01_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-responsive margin-bottom-20" />
+								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-01_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-fluid margin-bottom-20" />
 						
 							</div>
 						</div>
@@ -88,19 +88,19 @@
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-02_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-02_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Cart Rail" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-02_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Cart Rail" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-03_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-03_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-03_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-04_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-04_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-04_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-01_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/cart-rail-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Cart Rail" class="img-fluid" />
 										</a>
 									</div>
 								</div>	
