--- a/heat-applications-crop-in-crop.html
+++ b/heat-applications-crop-in-crop.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-sm-5">
 						
-								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-responsive margin-bottom-20" />
+								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_500_350_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-fluid margin-bottom-20" />
 						
 							</div>
 						</div>
@@ -88,19 +88,19 @@
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-03_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-03_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-03_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-01_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-02_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-02_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-responsive" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/in-crop-02_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Crop" class="img-fluid" />
 										</a>
 									</div>
 								</div>	
@@ -122,7 +122,7 @@
 														<p>Provides incredibly even heating across the width of your greenhouse growing areas.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/duofin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-responsive" /></a>
+														<a href="http://www.biothermsolutions.com/products/duofin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
