--- a/heat-applications-ground-in-floor.html
+++ b/heat-applications-ground-in-floor.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-sm-5">
 						
-								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_In-Slab_Floor_Heat_-_Steel_Headers_500_350_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm In-Floor" class="btn-fluid margin-bottom-20" />
+								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_In-Slab_Floor_Heat_-_Steel_Headers_500_350_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm In-Floor" class="img-fluid margin-bottom-20" />
 						
 							</div>
 						</div>
@@ -88,19 +88,19 @@
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/HDX_Hines_2_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/HDX_Hines_2_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm In-Floor" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/HDX_Hines_2_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm In-Floor" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/microclimate_tubing_800_600_s_c1_c_c.png" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/microclimate_tubing_500_350_s_c1_c_c.png" width="500" height="350" alt="BioTherm In-Floor" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/microclimate_tubing_500_350_s_c1_c_c.png" width="500" height="350" alt="BioTherm In-Floor" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_In-Slab_Floor_Heat_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_In-Slab_Floor_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Floor" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_In-Slab_Floor_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Floor" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_Pre-Slab_Floor_Heat_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_Pre-Slab_Floor_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Floor" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-_Pre-Slab_Floor_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm In-Floor" class="img-fluid" />
 										</a>
 									</div>
 								</div>	
@@ -122,7 +122,7 @@
 														<p>Our economical choice for floor heating tubing.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/hdx"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-In-Slab_Floor_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm HDX&trade;" class="btn-fluid" /></a>
+														<a href="http://www.biothermsolutions.com/products/hdx"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-In-Slab_Floor_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm HDX&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
