--- a/heat-applications-ground-snow-melt.html
+++ b/heat-applications-ground-snow-melt.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-sm-5">
 						
-								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-03_500_350_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="btn-fluid margin-bottom-20" />
+								<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-03_500_350_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="img-fluid margin-bottom-20" />
 						
 							</div>
 						</div>
@@ -88,19 +88,19 @@
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-01_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Snow Melt" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-01_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Snow Melt" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-02_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-02_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-02_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-03_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-03_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-03_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-04_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-04_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="btn-fluid" />
+											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/snow-melt-04_500_350_40_s_c1_c_c.jpg" width="500" height="350" alt="BioTherm Snow Melt" class="img-fluid" />
 										</a>
 									</div>
 								</div>	
@@ -122,7 +122,7 @@
 														<p>The original energy-saving BioTherm bench top heating system.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/microclimate-tubing"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MicroClimate_-On-Bench_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MicroClimate&trade; Tubing" class="btn-fluid" /></a>
+														<a href="http://www.biothermsolutions.com/products/microclimate-tubing"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MicroClimate_-On-Bench_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MicroClimate&trade; Tubing" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -142,7 +142,7 @@
 														<p>Jumbo size manifold technology to work with a wide range of heating applications.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/megatube"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MegaTube_for_Vegetables_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MegaTube&trade;" class="btn-fluid" /></a>
+														<a href="http://www.biothermsolutions.com/products/megatube"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_MegaTube_for_Vegetables_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm MegaTube&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -162,7 +162,7 @@
 														<p>Our economical choice for floor heating tubing.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/hdx"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-In-Slab_Floor_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm HDX&trade;" class="btn-fluid" /></a>
+														<a href="http://www.biothermsolutions.com/products/hdx"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Tubing_-_HDX_-In-Slab_Floor_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm HDX&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
