--- a/heat-applications-space-perimeter.html
+++ b/heat-applications-space-perimeter.html
@@ -40,8 +40,14 @@
 	</div>
 </nav>
 
-<div class="page-header header-smaller header-filter" data-parallax="true">
+<div class="page-header header-small" data-parallax="true" style=" background-image: url('img/heat-applications-perimeter.jpg'); ">
 	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h2>Perimeter Greenhouse Heating</h2>
+				<h3>Wrap the edges with some perimeter heat to give those areas the boost they need.</h3>
+			</div>
+		</div>
 
 	</div>
 </div>
@@ -49,27 +55,12 @@
 
 <div class="main main-raised">
 	<div class="container section">
-		
-		
 		<!-- Begin Page Content -->
 		<div id="applications">
 
 			<div class="container">
-				<div class="row">
-					<div class="col-xs-12">
-						<ol class="breadcrumb">
-		  	<a href="http://www.biothermsolutions.com/">Home</a> &nbsp;/&nbsp; <a href="http://www.biothermsolutions.com/applications/">Applications</a> &nbsp;/&nbsp; <span class="last">Perimeter</span>
-		</ol>
-					</div>
-				</div>
-				<div class="row margin-bottom-10">
-					<div class="col-xs-12">
-						<div class="jumbotron">
-							<h1>Perimeter
-							<br><small>Wrap the edges with some perimeter heat to give those areas the boost they need.</small></h1>
-						</div>
-					</div>
-				</div>
+
+
 				<div class="row">
 					<div class="col-md-9">
 						<div class="row margin-bottom-20">
@@ -89,8 +80,8 @@
 								<h4>Project Examples</h4>
 								<div class="row">
 								<div class="col-xs-6 col-md-3">
-										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Perimeter_Heat_800_600_60_s_c1_c_c.JPG" class="thumbnail fancybox" rel="ligthbox" >
-											<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Perimeter_Heat_500_350_40_s_c1_c_c.JPG" width="500" height="350" alt="BioTherm Perimeter" class="img-fluid" />
+										<a href="img/heat-applications-perimeter_StarFin.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+											<img src="img/heat-applications-perimeter_StarFin.jpg" alt="BioTherm Perimeter" class="img-fluid" />
 										</a>
 									</div><div class="col-xs-6 col-md-3">
 										<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/perimeter-01_800_600_60_s_c1_c_c.jpg" class="thumbnail fancybox" rel="ligthbox" >
@@ -288,6 +279,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
