--- a/heat.html
+++ b/heat.html
@@ -110,29 +110,29 @@
 							</div>
 							<div class="tab-pane" id="Ground">
 								<h4>Ground Heat</h4>
-								<a href="heat-applications-ground-bed.html"><button type="button" class="btn">Bed</button>
-								<a href="heat-applications-ground-frost.html"><button type="button" class="btn">Frost Protection</button>
-								<a href="heat-applications-ground-in-floor.html"><button type="button" class="btn">In-Floor</button>
-								<a href="heat-applications-ground-in-ground.html"><button type="button" class="btn">In-Ground</button>
-								<a href="heat-applications-ground-on-ground.html"><button type="button" class="btn">On-Ground</button>
-								<a href="heat-applications-ground-snow-melt.html"><button type="button" class="btn">Snow Melt</button>
+								<a href="heat-applications-ground-bed.html"><button type="button" class="btn">Bed</button></a>
+								<a href="heat-applications-ground-frost.html"><button type="button" class="btn">Frost Protection</button></a>
+								<a href="heat-applications-ground-in-floor.html"><button type="button" class="btn">In-Floor</button></a>
+								<a href="heat-applications-ground-in-ground.html"><button type="button" class="btn">In-Ground</button></a>
+								<a href="heat-applications-ground-on-ground.html"><button type="button" class="btn">On-Ground</button></a>
+								<a href="heat-applications-ground-snow-melt.html"><button type="button" class="btn">Snow Melt</button></a>
 							</div>
 							<div class="tab-pane" id="Crop">
 								<h4>Crop Heat</h4>
-								<a href="heat-applications-crop-cart-rail.html"><button type="button" class="btn">Cart Rail</button>
-								<a href="heat-applications-crop-in-crop.html"><button type="button" class="btn">In-Crop</button>
+								<a href="heat-applications-crop-cart-rail.html"><button type="button" class="btn">Cart Rail</button></a>
+								<a href="heat-applications-crop-in-crop.html"><button type="button" class="btn">In-Crop</button></a>
 							</div>
 							<div class="tab-pane" id="Bench">
 								<h4>Bench Heat</h4>
-								<a href="heat-applications-bench.html"><button type="button" class="btn">Bench</button>
-								<a href="heat-applications-bench-on-bench.html"><button type="button" class="btn">On-Bench</button>
-								<a href="heat-applications-bench-under-bench.html"><button type="button" class="btn">Under-Bench</button>
+								<a href="heat-applications-bench.html"><button type="button" class="btn">Bench</button></a>
+								<a href="heat-applications-bench-on-bench.html"><button type="button" class="btn">On-Bench</button></a>
+								<a href="heat-applications-bench-under-bench.html"><button type="button" class="btn">Under-Bench</button></a>
 							</div>
 							<div class="tab-pane" id="Space">
 								<h4>Space Heat</h4>
-								<a href="heat-applications-space-gutter.html"><button type="button" class="btn">Gutter</button>
-								<a href="heat-applications-space-perimeter.html"><button type="button" class="btn">Perimeter</button>
-								<a href="heat-applications-space-top.html"><button type="button" class="btn">Top</button>
+								<a href="heat-applications-space-gutter.html"><button type="button" class="btn">Gutter</button></a>
+								<a href="heat-applications-space-perimeter.html"><button type="button" class="btn">Perimeter</button></a>
+								<a href="heat-applications-space-top.html"><button type="button" class="btn">Top</button></a>
 							</div>
 						</div>
 					</div>
