--- a/heat-applications-ground-snow-melt.html
+++ b/heat-applications-ground-snow-melt.html
@@ -40,7 +40,7 @@
 	</div>
 </nav>
 
-<div class="page-header header-smaller header-filter" data-parallax="true">
+<div class="page-header header-smallest header-filter" data-parallax="true">
 	<div class="container">
 
 	</div>
