--- a/heat-applications-bench-under-bench.html
+++ b/heat-applications-bench-under-bench.html
@@ -118,11 +118,11 @@
 											<div class="col-xs-12">
 												<div class="row">
 													<div class="col-md-8">
-														<h2><a href="http://www.biothermsolutions.com/products/sunfin">SunFin&reg;</a></h2>
+														<h2><a href="heat-products-sunfin.html">SunFin&reg;</a></h2>
 														<p>High-output, radiant heat finned pipe made specifically for various greenhouse heating applications.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/sunfin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_-_Over_Heat_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm SunFin&reg;" class="img-fluid" /></a>
+														<a href="heat-products-sunfin.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_-_Over_Heat_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm SunFin&reg;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -138,11 +138,11 @@
 											<div class="col-xs-12">
 												<div class="row">
 													<div class="col-md-8">
-														<h2><a href="http://www.biothermsolutions.com/products/duofin">DuoFin&trade;</a></h2>
+														<h2><a href="heat-products-duofin.html">DuoFin&trade;</a></h2>
 														<p>Provides incredibly even heating across the width of your greenhouse growing areas.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/duofin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-fluid" /></a>
+														<a href="heat-products-duofin.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
@@ -158,11 +158,11 @@
 											<div class="col-xs-12">
 												<div class="row">
 													<div class="col-md-8">
-														<h2><a href="http://www.biothermsolutions.com/products/starfin">StarFin&trade;</a></h2>
+														<h2><a href="heat-products-starfin.html">StarFin&trade;</a></h2>
 														<p>Provides high heat output and minimizes pipes</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/starfin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Perimeter_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm StarFin&trade;" class="img-fluid" /></a>
+														<a href="heat-products-starfin.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_StarFin_-_Perimeter_Heat_500_300_60_s_c1_c_c.JPG" width="500" height="300" alt="BioTherm StarFin&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
