--- a/heat-applications-crop-in-crop.html
+++ b/heat-applications-crop-in-crop.html
@@ -118,11 +118,11 @@
 											<div class="col-xs-12">
 												<div class="row">
 													<div class="col-md-8">
-														<h2><a href="http://www.biothermsolutions.com/products/duofin">DuoFin&trade;</a></h2>
+														<h2><a href="heat-products-duofin.html">DuoFin&trade;</a></h2>
 														<p>Provides incredibly even heating across the width of your greenhouse growing areas.</p>
 													</div>
 													<div class="col-md-4">
-														<a href="http://www.biothermsolutions.com/products/duofin"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-fluid" /></a>
+														<a href="heat-products-duofin.html"><img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_300_60_s_c1_c_c.jpg" width="500" height="300" alt="BioTherm DuoFin&trade;" class="img-fluid" /></a>
 													</div>
 												</div>
 											</div>
