--- a/heat-applications-space-perimeter.html
+++ b/heat-applications-space-perimeter.html
@@ -53,8 +53,8 @@
 </div>
 
 <div class="main main-raised">
-	<div class="container section">
-		
+	<div class="container section section-top">
+
 		<div class="row">
 			<div class="col-md-9">
 				<div class="row">
