--- a/heat-applications-space-perimeter.html
+++ b/heat-applications-space-perimeter.html
@@ -71,33 +71,33 @@
 					</div>
 					<div class="panel-body">
 						<ul class="list-unstyled">
-						<li><span class="label label-ground">GROUND</span>
+							<li><span class="label label-ground">GROUND</span>
 								<ul class="nav">
-									<li><a href="heat-applications-ground-bed.html">Bed</a></li> &middot; 
-									<li><a href="heat-applications-ground-on-ground.html">On-Ground</a></li> &middot; 
-									<li><a href="heat-applications-ground-in-floor.html">In-Floor</a></li> &middot; 
-									<li><a href="heat-applications-ground in-ground.html">In-Ground</a></li> &middot; 
-									<li><a href="heat-applications-ground-snow-melt.html">Snow Melt</a></li> &middot; 
+									<li><a href="heat-applications-ground-bed.html">Bed</a></li> &nbsp;&middot;&nbsp;  
+									<li><a href="heat-applications-ground-on-ground.html">On-Ground</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground-in-floor.html">In-Floor</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground in-ground.html">In-Ground</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground-snow-melt.html">Snow Melt</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-ground-frost.html">Frost Protection</a></li>
 								</ul>
 							</li>
-						<li><span class="label label-bench">BENCH</span>
+							<li><span class="label label-bench">BENCH</span>
 								<ul class="nav">
-									<li><a href="heat-applications-bench-under-bench.html">Under-Bench</a></li> &middot; 
-									<li><a href="heat-applications-bench-on-bench.html">On-Bench</a></li> &middot; 
+									<li><a href="heat-applications-bench-under-bench.html">Under-Bench</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-bench-on-bench.html">On-Bench</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-bench.html">In-Bench</a></li>
 								</ul>
 							</li>
-						<li><span class="label label-space">SPACE</span>
+							<li><span class="label label-space">SPACE</span>
 								<ul class="nav">
-									<li><a href="heat-applications-space-gutter.html">Gutter</a></li> &middot; 
-									<li><a href="heat-applications-space-top.html">Top</a></li> &middot; 
+									<li><a href="heat-applications-space-gutter.html">Gutter</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-space-top.html">Top</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-space-perimeter.html">Perimeter</a></li>
 								</ul>
 							</li>
-						<li><span class="label label-crop">CROP</span>
+							<li><span class="label label-crop">CROP</span>
 								<ul class="nav">
-									<li><a href="heat-applications-crop-in-crop.html">In-Crop</a></li> &middot; 
+									<li><a href="heat-applications-crop-in-crop.html">In-Crop</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-crop-cart-rail.html">Cart Rail</a></li>
 								</ul>
 							</li>
