--- a/heat-applications-space-top.html
+++ b/heat-applications-space-top.html
@@ -40,30 +40,135 @@
 	</div>
 </nav>
 
-<div class="page-header header-smallest header-filter" data-parallax="true">
+<div class="page-header header-smaller" data-parallax="true" style=" background-image: url('img/heat-applications-gutter.jpg'); ">
 	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h2>Top Greenhouse Heating</h2>
+				<h3>Heat large spaces.</h3>
+			</div>
+		</div>
 
 	</div>
 </div>
 
-
 <div class="main main-raised">
-	<div class="container section">
-		
-		
-		
-		
-		
-	</div>
-	
-	
-	<div class="container section">
+	<div class="container section section-top">
+
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-9">
+				<div class="row">
+					<div class="col-md-10">
+						<p class="lead">Unit Heaters are the default choice, but not the only choice.</p>
+						<p>Several hot water delivery systems work well to heat large spaces, and even the unit heaters are better than they used to be. We have heaters specifically selected for their performance in the greenhouse industry.</p>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="no-top-margin">Applications</h3>
+					</div>
+					<div class="panel-body">
+						<ul class="list-unstyled">
+							<li><span class="label label-ground">GROUND</span>
+								<ul class="nav">
+									<li><a href="heat-applications-ground-bed.html">Bed</a></li> &nbsp;&middot;&nbsp;  
+									<li><a href="heat-applications-ground-on-ground.html">On-Ground</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground-in-floor.html">In-Floor</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground in-ground.html">In-Ground</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground-snow-melt.html">Snow Melt</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground-frost.html">Frost Protection</a></li>
+								</ul>
+							</li>
+							<li><span class="label label-bench">BENCH</span>
+								<ul class="nav">
+									<li><a href="heat-applications-bench-under-bench.html">Under-Bench</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-bench-on-bench.html">On-Bench</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-bench.html">In-Bench</a></li>
+								</ul>
+							</li>
+							<li><span class="label label-space">SPACE</span>
+								<ul class="nav">
+									<li><a href="heat-applications-space-gutter.html">Gutter</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-space-top.html">Top</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-space-perimeter.html">Perimeter</a></li>
+								</ul>
+							</li>
+							<li><span class="label label-crop">CROP</span>
+								<ul class="nav">
+									<li><a href="heat-applications-crop-in-crop.html">In-Crop</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-crop-cart-rail.html">Cart Rail</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>	
+				
+		<div class="row">
+			<h3>Products</h3>
+		</div>
+		<div class="row">	
+			<div class="col-md-4">
+				<div class="card card-plain">
+					<a href="heat-products-sunfin.html"><img src="img/heat-sunfin.jpg" alt="BioTherm SunFin&reg;" class="card-img-top" /></a>
+					<div class="card-body">
+						<h3><a href="heat-products-sunfin.html">SunFin</a><small> &reg;</small></h3>
+						<p class="card-text">High-output, radiant heat finned pipe made specifically for various greenhouse heating applications.</p>
+						<a href="heat-products-sunfin.html"><button type="button" class="btn btn-success"> Sunfin</button></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card card-plain">
+					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm DuoFin&trade;" class="card-img-top" /></a>
+					<div class="card-body">
+						<h3><a href="heat-products-duofin.html">DuoFin</a><small> &trade;</small></h3>
+						<p>Provides incredibly even heating across the width of your greenhouse growing areas.<br /><br /></p>
+						<a href="heat-products-duofin.html"><button type="button" class="btn btn-success"> Duofin</button></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card card-plain">
+					<a href="heat-products-starfin.html"><img src="img/heat-starfin.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
+					<div class="card-body">
+						<h3><a href="heat-products-starfin.html">StarFin</a><small> &trade;</small></h3>
+						<p>Provides high heat output and minimizes pipes.<br /><br /><br /></p>
+						<a href="heat-products-starfin.html"><button type="button" class="btn btn-success"> Starfin</button></a>
+					</div>
+				</div>
 			</div>
 		</div>
+
+		<div class="row" style="margin-top:40px;">
+			<h4>Project Examples</h4>
+		</div>
+		<div class="row">
+			<div class="col col1">
+				<a href="img/heat-application-space-top.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/heat-application-space-top.jpg" alt="BioTherm Perimeter" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col3">
+				<a href="img/heat-application-space-top-2.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/heat-application-space-top-2.jpg" alt="BioTherm Perimeter" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col4">
+				<a href="img/heat-application-space-top-3.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/heat-application-space-top-3.jpg" alt="BioTherm Perimeter" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col5">
+				<a href="img/heat-application-space-top-4.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/heat-application-space-top-4.jpg" alt="BioTherm Perimeter" class="img-fluid" />
+				</a>
+			</div>
+		</div>
+
 	</div>
 </div>
 
